objects/BootCamper__c.object
<CustomObject><fields>
        <fullName>Geolocation__c</fullName>
        <description>Geolocation</description>
        <inlineHelpText>Geolocation (longtitude, latitude)</inlineHelpText>
        <label>Geolocation</label>
        <scale>5</scale>
        <type>Location</type>
    </fields><fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <defaultValue>"http://www.linkedin.com"</defaultValue>
        <description>URL to the camper iinkedin profile</description>
        <inlineHelpText>URL to linkedIn profile</inlineHelpText>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Rate__c</fullName>
        <description>rating via 1st impression</description>
        <inlineHelpText>1st impression rating</inlineHelpText>
        <label>Rate</label>
        <picklist>
            <picklistValues>
                <fullName>hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lukewarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>region__c</fullName>
        <description>region camper from</description>
        <inlineHelpText>Geo region this camper is at 2015</inlineHelpText>
        <label>region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>role0__c</fullName>
        <description>initial role at 2015</description>
        <inlineHelpText>initial role at 2015</inlineHelpText>
        <label>role0</label>
        <picklist>
            <picklistValues>
                <fullName>TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>participant of the 10/6 boot camp. anyone</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>BootCamper</label><nameField>
        <label>BootCamper Name</label>
        <type>Text</type>
    </nameField><pluralLabel>BootCampers</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>prevent_duplicate</fullName>
        <active>true</active>
        <description>validation rules to prevent duplicates</description>
        <errorConditionFormula>LEN (

VLOOKUP( $ObjectType.BootCamper__c.Fields.Name  ,  $ObjectType.BootCamper__c.Fields.Name ,  Name ) 

)  &lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Duplicate found!</errorMessage>
    </validationRules></CustomObject>